--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
               <div class="container">
                            <div  class="card-white" id="presentation">
                                          <h1>Hello, I'm Theophile 😁</h1> 
-                                         <img src="images/profile.jpeg" class="img-circle" width=170px alt="Theophile" >    
+                                         <img src= "my-profile/Images/Profile.jpeg" class="img-circle" width=170px alt="Theophile" >    
  
                                               
                                         
